Fixed date picker size on mobile

--- a/src/forms/EditBookingForm/EditBookingForm.module.css
+++ b/src/forms/EditBookingForm/EditBookingForm.module.css
@@ -117,11 +117,11 @@
 
 .datePicker {
   margin-bottom: 2rem;
-  max-width: 18rem;
+  max-width: 80vw;
   margin-top: 2.5rem;
   margin-inline: auto;
 
-  @media (--viewportLarge) {
+  @media (--viewportMedium) {
     margin-inline: 0;
     max-width: 20rem;
   }
@@ -228,6 +228,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
 
   @media (--viewportLarge) {
     display: grid;
